[package]
name = "hur"
version = "0.1.0"
description = "CLI HTTP requests, nothing more complicated than that."
homepage = "https://github.com/vkstrm/hur"
repository = "https://github.com/vkstrm/hur"
authors = ["vkstrm <mongomoves@gmail.com>"]
edition = "2018"
keywords = ["cli", "http"]
categories = ["command-line-utilities"]
readme = "README.md"
publish = false

[dependencies]
regex = "1"
native-tls = "0.2"
url = "2.2.2"
clap = {version = "3.0.14", features = ["cargo"] }
serde_json = "1.0.68"
serde = {version = "1.0.130", features = ["derive"] }
log = "0.4"
httptest = "0.15.4"
